add read from folder